tests/eval/exp/good/builtin-rem2.scilla
(* Expected result: 117 *)
let f = fun (z : Int32) =>
    let b = Int32 40 in
    fun (c : Int32) =>
    	let t = builtin rem b c in
	builtin add z t
in
let a = Int32 100 in
let b = Int32 23 in
f a b
