tests/eval/exp/bad/builtin-pow.scilla
(* Expected: Bad type. *)
let a = Int32 100 in
let b = Uint32 2 in
builtin pow b a
